deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: motivation-service
spec:
  selector:
    app: motivation-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
