deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motivation-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: motivation.local  # Change if you have a domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: motivation-service
            port:
              number: 80
